# SoundCloud-Desktop

./: .gitignore  README.md
.github/flatpak/: io.github.zxcloli666.SoundcloudDesktop.yml
.github/workflows/: auto-build.yml
backend/: docker-compose-prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/src/: app.module.ts
backend/src/auth/entities/: session.entity.ts
backend/src/likes/: likes.controller.ts  likes.service.ts
backend/src/me/: me.controller.ts
backend/src/playlists/: playlists.controller.ts
backend/src/soundcloud/: sc-public-api.service.ts  soundcloud.module.ts
backend/src/tracks/: tracks.controller.ts  tracks.service.ts
backend/src/users/: users.controller.ts
desktop/: package.json  pnpm-lock.yaml
desktop/public/: sw.js
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: audio_player.rs  audio_server.rs  constants.rs  lib.rs  main.rs  proxy.rs  proxy_server.rs  server.rs
desktop/src/components/: ThemeProvider.tsx  UpdateChecker.tsx
desktop/src/components/layout/: AppShell.tsx  NowPlayingBar.tsx  Sidebar.tsx  Titlebar.tsx
desktop/src/components/music/: AddToPlaylistDialog.tsx  LyricsPanel.tsx  PlaylistCard.tsx  TrackCard.tsx
desktop/src/i18n/: index.ts
desktop/src/i18n/locales/: en.json  ru.json
desktop/src/lib/: audio.ts  cache.ts  constants.ts  hooks.ts  icons.tsx  lyrics.ts  scproxy.ts  tauri-storage.ts
desktop/src/pages/: Home.tsx  Library.tsx  PlaylistPage.tsx  Search.tsx  Settings.tsx  UserPage.tsx
desktop/src/stores/: player.ts  settings.ts
docs/public/: index.html
landing/: .firebaserc  biome.json  firebase.json  index.html  package.json  pnpm-lock.yaml
landing/src/: App.tsx  index.css
