[package]
name = "soundcloud-desktop"
version = "5.4.1"
description = "Beautiful Soundcloud Desktop app"
authors = ["zxcloli666"]
edition = "2021"

[lib]
name = "soundcloud_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
warp = "0.3"
discord-rich-presence = "1"
tauri-plugin-http = "2.5.7"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
futures-util = "0.3"
tauri-plugin-localhost = "2"
http = "1"
urlencoding = "2"
tauri-plugin-single-instance = "2.4.0"

