[package]
name = "soundcloud-desktop"
version = "5.12.0"
description = "Beautiful Soundcloud Desktop app"
authors = ["zxcloli666"]
edition = "2021"

[lib]
name = "soundcloud_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
warp = "0.3"
discord-rich-presence = "1"
tauri-plugin-http = "2.5.7"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"], default-features = false }
futures-util = "0.3"
http = "1"
urlencoding = "2"
tauri-plugin-single-instance = "2.4.0"
rodio = { version = "0.22.2", features = ["mp3", "symphonia-aac", "symphonia-isomp4", "symphonia-ogg"] }
cpal = "0.17"
biquad = "0.5"
souvlaki = "0.8"
raw-window-handle = "0.6"
tauri-plugin-dialog = "2.6.0"
ogg = "0.9.2"
audiopus = "0.2.0"

